force/src/objects/DVIWebService__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting for the DVI Web Service URL and token header</description>
    <fields>
        <fullName>DVI_Token_Header__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DVI Token Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVI_Web_Service_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DVI Web Service Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVI_Web_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DVI Web Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EndPoint Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint_Sandbox__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EndPoint Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Token_Header_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Token Header Production</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Token_Header_Sandbox__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Token Header Sandbox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Org_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prod Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redo_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Redo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DVI Web Service</label>
</CustomObject>